# molekul

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DEVAM.md  LICENSE.txt  README.md  paper.bib  paper.md  pyproject.toml  requirements.txt  softwarex_paper.md  softwarex_paper.tex
.github/workflows/: ci.yml
docs/: BENCHMARKS.md  EXPERIMENT_LOGGING.md  PROFILING.md  VISUALIZATION.md
examples/: h2.xyz  h2o.xyz  heh_plus.xyz
outputs/: phase2_integrals.txt  phase4_rhf.txt  phase5_h2o_optimizer.txt  phase5_optimizer.txt  phase8_benchmark.txt
outputs/figures/: pes_n2_data.json
outputs/logs/: benchmark_14mol.json  gpu_benchmark.json  pes_n2_scan.json  phase10_harmonic_freqs.json  phase10_harmonic_freqs.txt  phase12_dft.json  (+23 more)
profiling/: cprofile_eri_ch4.txt  cprofile_eri_h2o.txt  cprofile_grad_h2o.txt  cprofile_scf_h2o.txt  lineprofile_eri.txt  lineprofile_fock.txt  profile_all.py  subphase_timing.txt
scripts/: benchmark.py  benchmark_14mol.py  benchmark_gpu.py  benchmark_matrix.py  compare_pyscf.py  export_cube_h2o.py  plot_gpu_benchmark.py  potential_energy_scan.py  run_example.py  status.py  test_ccsd_quick.py  validate_basis.py  validate_freqs.py  validate_h2o_opt.py  validate_mp2.py  validate_optimizer.py  validate_phase2.py  validate_population.py  validate_rhf.py
tests/: test_atoms.py  test_basis_ccpvdz.py  test_boys.py  test_ccsd.py  test_cis.py  test_cube.py  test_dft.py  test_eri.py  test_freqs.py  test_h2o_optimizer.py  test_integrals.py  test_io_xyz.py  test_molecule.py  test_mp2.py  test_optimizer.py  test_population.py  test_rhf.py
(+24 files in other folders)
